Back/code-crud/src/main/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-back
spec:
  selector:
    matchLabels:
      app: app-back
  template:
    metadata:
      labels:
        app: app-back
    spec:
      containers:
      - name: app-back
        image: rafaelduartes/app-back:latest
        ports:
          - containerPort: 8080
        resources:
          limits:
            cpu: "500m"
            memory: "550Mi"
      imagePullSecrets:
      - name: docker-registry
