Back/code-crud/src/main/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quarkus-app-service
spec:
  selector:
    app: quarkus-app
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  type: ClusterIP
